Align map almost perfect Fixed map Change background colour same as map Testing responsiveness

--- a/scss/_partial.scss
+++ b/scss/_partial.scss
@@ -73,11 +73,31 @@
 
 #main-logo {
 	position: absolute;
+	display: none;
 	top:0px;
-	right: 150px;
+	right: 11%;
 	height: 150px;
 	width: 100px;
-	background-color: orange;
+	background-color: purple;
+}
+
+#description-logo {
+	position: absolute;
+	display: none;
+	top:0px;
+	left: 40px;
+	height: 150px;
+	width: 100px;
+	background-color: purple;
+}
+
+#small-logo {
+	position: absolute;
+	top:0px;
+	left: 10%;
+	height: 150px;
+	width: 100px;
+	background-color: green;
 }
 
 #main-menu {
@@ -95,10 +115,6 @@
 
 #main-menu div {
 	height: 100%;
-}
-
-#main-menu div.a {
-	width: 1000px;
 }
 
 #more-information {
